--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,17 +1,17 @@
 /*!
-Theme Name: Kevin's Child Theme Boilerplate
+Theme Name: Tahosa Lodge 2.0
 Author: Kevin McKernan
-Description: Custom child theme of Divi
-Version: 1.0
+Description: Custom child theme of Extra
+Version: 2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Template: Divi
+Template: Extra
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
-@import "../Divi/style.css";
+@import "../Extra/style.css";
 @import "partials/mixins";
 @import "partials/grid";
 @import "partials/variables";
