Add custom style to timeline

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,3 +20,4 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import "partials/header";
 @import "partials/home";
 @import "partials/footer";
+@import "partials/flashback-custom";
