--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,12 +12,13 @@ Use it to make something cool, have fun, and share what you've learned with othe
 */
 
 @import "../Extra/style.css";
-@import "partials/mixins";
-@import "partials/grid";
-@import "partials/variables";
-@import "partials/global";
-@import "partials/typography";
-@import "partials/header";
-@import "partials/home";
-@import "partials/footer";
-@import "partials/flashback-custom";
+@import "mixins";
+@import "grid";
+@import "variables";
+@import "global";
+@import "typography";
+@import "header";
+@import "home";
+@import "footer";
+@import "flashback-custom";
+@import "forms";
