align leadership positions on form

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -1,3 +1,7 @@
 .percentbar_blue {
 	background-color: $red-primary !important;
 }
+
+.gform_wrapper table.gfield_list, .gform_wrapper table.gfield_list caption, .gform_wrapper table.gfield_list tbody, .gform_wrapper table.gfield_list td, .gform_wrapper table.gfield_list tfoot, .gform_wrapper table.gfield_list th, .gform_wrapper table.gfield_list thead, .gform_wrapper table.gfield_list tr {
+	vertical-align: top !important;
+}
