style gravity forms save and continue later button

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -2,7 +2,14 @@
 	background-color: $red-primary !important;
 }
 
-.gform_wrapper table.gfield_list, .gform_wrapper table.gfield_list caption, .gform_wrapper table.gfield_list tbody, .gform_wrapper table.gfield_list td, .gform_wrapper table.gfield_list tfoot, .gform_wrapper table.gfield_list th, .gform_wrapper table.gfield_list thead, .gform_wrapper table.gfield_list tr {
+.gform_wrapper table.gfield_list,
+.gform_wrapper table.gfield_list caption,
+.gform_wrapper table.gfield_list tbody,
+.gform_wrapper table.gfield_list td,
+.gform_wrapper table.gfield_list tfoot,
+.gform_wrapper table.gfield_list th,
+.gform_wrapper table.gfield_list thead,
+.gform_wrapper table.gfield_list tr {
 	vertical-align: top !important;
 }
 
@@ -13,5 +20,31 @@
 	&:focus,
 	&:active {
 		max-height: 100%;
+	}
+}
+
+.gform_save_link {
+	color: rgba(0, 0, 0, 0.6);
+	font-size: 16px;
+	width: auto;
+	margin: 0 16px 0 0;
+	outline: none;
+	display: inline-block;
+	background: rgba(0, 0, 0, 0.1);
+	padding: 10px 12px;
+	border: 0;
+	border-style: solid;
+	border-radius: 3px;
+	box-shadow: none;
+	font-family: inherit;
+	font-weight: 600;
+	line-height: normal;
+	text-shadow: none;
+	text-transform: uppercase;
+	cursor: pointer;
+	transition: 0.3s ease;
+
+	&:hover {
+		background: #ccc;
 	}
 }
